Fixed scrollbars(#33)

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -14,6 +14,10 @@ body,
 .inner {
 	height: 100%;
 	width: 100%;
+	overflow: hidden;
+}
+
+.inner {
 	overflow-x: hidden;
 	overflow-y: scroll;
 	-webkit-overflow-scrolling: touch;
